feat(account): add token proto
